# openfhe-logreg-training-examples

./: CMakeLists.txt  PlateauLRScheduler.hpp  logreg.qsub  logreg.qsub.e1111904.3  logreg.qsub.e1111904.5  logreg.qsub.o1111904.1  logreg.qsub.o1111904.2  logreg.qsub.o1111904.3  logreg.qsub.o1111904.4  logreg.qsub.o1111904.5  logreg.qsub.o1114747.1  logreg.qsub.o1114747.2  logreg.qsub.o1114747.3  logreg.qsub.o1114747.4  logreg.qsub.o1114747.5  logreg.qsub.o1136215.1  logreg.qsub.o1136215.2  logreg.qsub.o1136215.3  logreg.qsub.o1136215.4  logreg.qsub.o1136215.5  lr_adam.cpp  lr_nadam.cpp  lr_nag.cpp  lr_rms.cpp  minimax.hpp  parameters.h
results_base/: 13_test.csv  27_loss.csv  27_test.csv  27_weights.csv  2_loss.csv  2_test.csv  2_weights.csv  59_loss.csv  5_loss.csv  5_test.csv  5_weights.csv
results_deneme/: 13_loss.csv  13_test.csv  13_weights.csv  27_loss.csv  27_test.csv  27_weights.csv  2_loss.csv  2_test.csv  2_weights.csv  59_loss.csv  59_test.csv  59_weights.csv  5_loss.csv  5_test.csv  5_weights.csv
results_nag2/: 13_loss.csv  13_test.csv  13_weights.csv  2_loss.csv
results_sgd/: 13_loss.csv  13_test.csv  13_weights.csv  27_loss.csv  27_test.csv  27_weights.csv  2_loss.csv  2_test.csv  2_weights.csv  59_loss.csv  59_test.csv  59_weights.csv  5_loss.csv  5_test.csv  5_weights.csv
results_v2/: 13_loss.csv  13_test.csv  13_weights.csv  59_loss.csv  59_test.csv  59_weights.csv  5_loss.csv  5_test.csv  5_weights.csv
